kafka/base/opf-kafdrop.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: kafka-kafdrop
  labels:
    name: kafdrop
spec: {}
