kafka/base/opf-kafdrop-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafdrop
  labels:
    name: kafdrop
spec:
  type: ClusterIP
  ports:
    - port: 9000
      targetPort: 9000
      protocol: TCP
  selector:
    name: kafdrop-up
